[bug/new-request] Step 3 missing background text for iphone

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -94,7 +94,7 @@
 }
 .month-picker > .rmp-container .rmp-popup.light .rmp-pad li.active,
 .month-picker > .rmp-container .rmp-popup.light .rmp-pad li.active:hover {
-  background-color: #f6d742 !important;
+  background-color: #fac424 !important;
   color: #000 !important;
 }
 .month-picker > .rmp-container .rmp-popup.light {
